2021 offseason update